--- a/MZBlog.Core/packages.config
+++ b/MZBlog.Core/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MarkdownSharp" version="1.13.0.0" targetFramework="net45" />
   <package id="mongocsharpdriver" version="1.8.3" targetFramework="net45" />
+  <package id="pinyin4net" version="1.0.0" targetFramework="net45" />
 </packages>
