--- a/MZBlog.Web/Web.config
+++ b/MZBlog.Web/Web.config
@@ -5,7 +5,6 @@
       <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
     </sectionGroup>
   </configSections>
-  
 
   <appSettings>
     <add key="SiteName" value="MZBlog" />
@@ -16,9 +15,9 @@
     <add key="EncryptionKey" value="this is the default EncryptionKey" />
     <add key="HmacKey" value="this is the default HmacKey" />
 
-    
     <add key="vs:EnableBrowserLink" value="false" />
-  <add key="webPages:Enabled" value="false" /></appSettings>
+    <add key="webPages:Enabled" value="false" />
+  </appSettings>
 
   <connectionStrings>
     <add name="MZBlogDB" connectionString="mongodb://localhost/mzblog" />
@@ -26,17 +25,18 @@
 
   <system.web>
     <compilation debug="true" targetFramework="4.5">
-      
-    <buildProviders>
+
+      <buildProviders>
         <add extension=".cshtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyCSharpRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
         <add extension=".vbhtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyVisualBasicRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
-      </buildProviders></compilation>
+      </buildProviders>
+    </compilation>
     <httpRuntime targetFramework="4.5" maxRequestLength="1048576" />
 
-    
-  <httpHandlers>
+    <httpHandlers>
       <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-    </httpHandlers></system.web>
+    </httpHandlers>
+  </system.web>
 
   <location path="content">
     <system.webServer>
@@ -66,19 +66,18 @@
     </assemblyBinding>
   </runtime>
 
-  
-
-  
-<system.webServer>
+  <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <httpErrors existingResponse="PassThrough" />
     <handlers>
       <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
     </handlers>
-  </system.webServer><system.web.webPages.razor>
+  </system.webServer>
+  <system.web.webPages.razor>
     <pages pageBaseType="Nancy.ViewEngines.Razor.NancyRazorViewBase">
       <namespaces>
         <add namespace="Nancy.ViewEngines.Razor" />
       </namespaces>
     </pages>
-  </system.web.webPages.razor></configuration>
+  </system.web.webPages.razor>
+</configuration>
