--- a/MZBlog.Web/Web.config
+++ b/MZBlog.Web/Web.config
@@ -5,6 +5,7 @@
       <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
     </sectionGroup>
   </configSections>
+  
 
   <appSettings>
     <add key="SiteName" value="MZBlog" />
@@ -16,8 +17,8 @@
     <add key="HmacKey" value="this is the default HmacKey" />
 
     <add key="vs:EnableBrowserLink" value="false" />
-    <add key="webPages:Enabled" value="false" />
-  </appSettings>
+    
+  <add key="webPages:Enabled" value="false" /></appSettings>
 
   <connectionStrings>
     <add name="MZBlogDB" connectionString="mongodb://localhost/mzblog" />
@@ -26,17 +27,17 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5">
 
-      <buildProviders>
+      
+    <buildProviders>
         <add extension=".cshtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyCSharpRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
         <add extension=".vbhtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyVisualBasicRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
-      </buildProviders>
-    </compilation>
+      </buildProviders></compilation>
     <httpRuntime targetFramework="4.5" maxRequestLength="1048576" />
 
-    <httpHandlers>
+    
+  <httpHandlers>
       <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-    </httpHandlers>
-  </system.web>
+    </httpHandlers></system.web>
 
   <location path="content">
     <system.webServer>
@@ -63,21 +64,25 @@
         <assemblyIdentity name="MongoDB.Driver" publicKeyToken="f686731cfb9cc103" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.8.1.20" newVersion="1.8.1.20" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Razor" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 
-  <system.webServer>
+  
+  
+<system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <httpErrors existingResponse="PassThrough" />
     <handlers>
       <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
     </handlers>
-  </system.webServer>
-  <system.web.webPages.razor>
+  </system.webServer><system.web.webPages.razor>
     <pages pageBaseType="Nancy.ViewEngines.Razor.NancyRazorViewBase">
       <namespaces>
         <add namespace="Nancy.ViewEngines.Razor" />
       </namespaces>
     </pages>
-  </system.web.webPages.razor>
-</configuration>
+  </system.web.webPages.razor></configuration>
