修正razor的config设置

--- a/MZBlog.Web/Web.config
+++ b/MZBlog.Web/Web.config
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
-      <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
+    <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+      <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
     </sectionGroup>
   </configSections>
-  
 
   <appSettings>
     <add key="SiteName" value="MZBlog" />
@@ -18,8 +17,8 @@
 
     <add key="vs:EnableBrowserLink" value="false" />
 
-    
-  <add key="webPages:Enabled" value="false" /></appSettings>
+    <add key="webPages:Enabled" value="false" />
+  </appSettings>
 
   <connectionStrings>
     <add name="MZBlogDB" connectionString="mongodb://localhost/mzblog" />
@@ -28,17 +27,17 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5">
 
-      
-    <buildProviders>
+      <buildProviders>
         <add extension=".cshtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyCSharpRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
         <add extension=".vbhtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyVisualBasicRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
-      </buildProviders></compilation>
+      </buildProviders>
+    </compilation>
     <httpRuntime targetFramework="4.5" maxRequestLength="1048576" />
 
-    
-  <httpHandlers>
+    <httpHandlers>
       <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-    </httpHandlers></system.web>
+    </httpHandlers>
+  </system.web>
 
   <location path="content">
     <system.webServer>
@@ -59,11 +58,11 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="MongoDB.Bson" publicKeyToken="f686731cfb9cc103" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.8.1.20" newVersion="1.8.1.20" />
+        <bindingRedirect oldVersion="0.0.0.0-1.10.0" newVersion="1.10.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="MongoDB.Driver" publicKeyToken="f686731cfb9cc103" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.8.1.20" newVersion="1.8.1.20" />
+        <bindingRedirect oldVersion="0.0.0.0-1.10.0" newVersion="1.10.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Razor" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -72,18 +71,18 @@
     </assemblyBinding>
   </runtime>
 
-  
-  
-<system.webServer>
+  <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <httpErrors existingResponse="PassThrough" />
     <handlers>
       <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
     </handlers>
-  </system.webServer><system.web.webPages.razor>
+  </system.webServer>
+  <system.web.webPages.razor>
     <pages pageBaseType="Nancy.ViewEngines.Razor.NancyRazorViewBase">
       <namespaces>
         <add namespace="Nancy.ViewEngines.Razor" />
       </namespaces>
     </pages>
-  </system.web.webPages.razor></configuration>
+  </system.web.webPages.razor>
+</configuration>
