--- a/MZBlog.Core.Tests/MZBlog.Core.Tests.csproj
+++ b/MZBlog.Core.Tests/MZBlog.Core.Tests.csproj
@@ -49,6 +49,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\FluentAssertions.3.3.0\lib\net45\FluentAssertions.Core.dll</HintPath>
     </Reference>
+    <Reference Include="iBoxDB">
+      <HintPath>..\packages\iBoxDB.2.3.2\lib\iBoxDB.dll</HintPath>
+    </Reference>
     <Reference Include="MongoDB.Bson, Version=1.10.0.62, Culture=neutral, PublicKeyToken=f686731cfb9cc103, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\mongocsharpdriver.1.10.0\lib\net35\MongoDB.Bson.dll</HintPath>
@@ -76,7 +79,7 @@
   <ItemGroup>
     <Compile Include="Extensions\StringExtensionsTests.cs" />
     <Compile Include="Accounts\ChangePasswordCommandTests.cs" />
-    <Compile Include="MongoDBBackedTest.cs" />
+    <Compile Include="iBoxDBBackedTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Accounts\LoginCommandTests.cs" />
   </ItemGroup>
