--- a/MZBlog.Core.Tests/packages.config
+++ b/MZBlog.Core.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FluentAssertions" version="3.3.0" targetFramework="net45" />
+  <package id="iBoxDB" version="2.3.2" targetFramework="net45" />
   <package id="mongocsharpdriver" version="1.10.0" targetFramework="net45" />
   <package id="xunit" version="1.9.2" targetFramework="net45" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
