--- a/MZBlog.Web/packages.config
+++ b/MZBlog.Web/packages.config
@@ -5,11 +5,15 @@
   <package id="html5shiv" version="0.1.0.8" targetFramework="net45" />
   <package id="iBoxDB" version="2.3.2" targetFramework="net45" />
   <package id="jQuery" version="1.11.2" targetFramework="net45" />
+  <package id="jQuery.Validation" version="1.8.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="Nancy" version="1.1" targetFramework="net45" />
   <package id="Nancy.Hosting.Aspnet" version="1.1" targetFramework="net45" />
   <package id="Nancy.Validation.DataAnnotations" version="1.1" targetFramework="net45" />
+  <package id="Nancy.Validation.DataAnnotations.Extensions" version="0.2.0" targetFramework="net45" />
   <package id="Nancy.Viewengines.Razor" version="1.1" targetFramework="net45" />
   <package id="Twitter.Bootstrap.Less" version="3.3.2" targetFramework="net45" />
 </packages>
