--- a/MZBlog.Web/Web.config
+++ b/MZBlog.Web/Web.config
@@ -33,6 +33,7 @@
     <httpHandlers>
       <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
     </httpHandlers>
+   
   </system.web>
 
   <location path="content">
@@ -60,6 +61,9 @@
   </runtime>
 
   <system.webServer>
+    <staticContent>
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
+    </staticContent>
     <validation validateIntegratedModeConfiguration="false" />
     <httpErrors existingResponse="PassThrough" />
     <handlers>
