--- a/MZBlog.Web/MZBlog.Web.csproj
+++ b/MZBlog.Web/MZBlog.Web.csproj
@@ -235,6 +235,14 @@
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="fonts\FontAwesome.otf" />
+    <None Include="fonts\fontawesome-webfont.woff2" />
+    <Content Include="fonts\fontawesome-webfont.woff" />
+    <Content Include="fonts\fontawesome-webfont.ttf" />
+    <Content Include="fonts\fontawesome-webfont.svg" />
+    <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="css\font-awesome.min.css" />
+    <Content Include="css\font-awesome.css" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ErrorHandling\MZBlog404Handler.cs" />
@@ -330,6 +338,11 @@
         </WebProjectProperties>
       </FlavorProperties>
     </VisualStudio>
+    <MonoDevelop>
+      <Properties>
+        <XspParameters Port="8080" Address="127.0.0.1" SslMode="None" SslProtocol="Default" KeyType="None" CertFile="" KeyFile="" PasswordOptions="None" Password="" Verbose="True" />
+      </Properties>
+    </MonoDevelop>
   </ProjectExtensions>
   <PropertyGroup>
     <PostBuildEvent>
